--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,71 @@
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-bcrypt==3.2.2
-blinker==1.7.0
-bottle==0.12.25
-Brlapi==0.8.5
-certifi==2023.11.17
-chardet==5.2.0
-click==8.1.6
-cloud-init==25.2
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-cryptography==41.0.7
-cupshelpers==1.0
-dbus-python==1.3.2
-defer==1.0.6
-distro==1.9.0
-distro-info==1.7+build1
-duplicity==2.1.4
-fasteners==0.18
-httplib2==0.20.4
-idna==3.6
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-louis==3.29.0
-Mako==1.3.2.dev0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.20.1
+absl-py==2.3.1
+asttokens==3.0.0
+astunparse==1.6.3
+certifi==2025.10.5
+charset-normalizer==3.4.3
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.17
+decorator==5.2.1
+executing==2.2.1
+flatbuffers==25.9.23
+fonttools==4.60.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.75.1
+h5py==3.14.0
+idna==3.10
+ipykernel==6.30.1
+ipython==9.6.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+keras==3.11.3
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.6
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-monotonic==1.6
-netaddr==0.8.0
-netifaces==0.11.0
-oauthlib==3.2.2
-olefile==0.46
-packaging==24.0
-paramiko==2.12.0
+ml_dtypes==0.5.3
+namex==0.1.0
+nest-asyncio==1.6.0
+numpy==2.2.6
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
+parso==0.8.5
 pexpect==4.9.0
-pillow==10.2.0
-platformio==4.3.4
-psutil==5.9.8
+pillow==11.3.0
+platformdirs==4.4.0
+prompt_toolkit==3.0.52
+protobuf==6.32.1
+psutil==7.1.0
 ptyprocess==0.7.0
-pycairo==1.25.1
-pycups==2.0.1
-pyelftools==0.30
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu5
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-screen-resolution-extra==0.0.0
-semantic-version==2.10.0
-setuptools==68.1.2
-six==1.16.0
-systemd-python==235
-tabulate==0.8.10
-terminator==2.1.3
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-urllib3==2.0.7
-usb-creator==0.3.16
-wadllib==1.3.6
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
+pure_eval==0.2.3
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pyzmq==27.1.0
+requests==2.32.5
+rich==14.1.0
+setuptools==80.9.0
+six==1.17.0
+stack-data==0.6.3
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
+tornado==6.5.2
+traitlets==5.14.3
+typing_extensions==4.15.0
+urllib3==2.5.0
+wcwidth==0.2.14
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.3
